Update3 RockPaperScissors notebook

--- a/RockPaperScissors.ipynb
+++ b/RockPaperScissors.ipynb
@@ -2079,6 +2079,51 @@
     "    print(f\"Current Learning Rate: {current_lr:.6f}\")\n",
     "print(\"Done!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "93a55750-bdb5-40b6-8d38-6b86720a42f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0], device='cuda:0')\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "X,y = evaluate_dataset[70]\n",
+    "X = X.to(device).unsqueeze(0)\n",
+    "model_NET.to(device)\n",
+    "model_NET.eval()\n",
+    "with torch.no_grad():\n",
+    "    pred = model_NET(X)\n",
+    "    print(pred.argmax(1))\n",
+    "    print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "0f06268d-535e-4e31-9092-ba3d0c636afc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved PyTorch Model State to model_NET.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.save(model_NET.state_dict(), \"model_NET.pth\") # On sauvegarde l'etat du modele dans un dico\n",
+    "print(\"Saved PyTorch Model State to model_NET.pth\")"
+   ]
   }
  ],
  "metadata": {
